--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--  TODO: remove this demo view  -->
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
